# algebra

./: .gitignore  README.md
algebrapy/: Cargo.toml  pyproject.toml
algebrapy/src/: lib.rs
algebrapy/src/arith/: egcd.rs  mod.rs  prime.rs
algebrapy/src/coding/: bch.rs  mod.rs  rs.rs
algebrapy/src/field/: fp.rs  fq.rs  mod.rs  poly_fp.rs
algebrapy/src/group/: mod.rs  perm.rs
algebrapy/src/ring/: mod.rs  zn.rs
docs/: README.md  finite-actions-guide.md  group-ring-field-catalog.md
play/: Fq-extensions-fields.py  Sn-subgroup-generation.py  abc.py  bch.py  bch_code_demo.py  cayley.py  def.py  finite_field_extensions.py  fp_cayley_table.py  fp_field_methods.py  fp_multiplicative_orders.py  fp_operator_overloads.py  fp_permutation_actions.py  fp_pow_protocol.py  fp_quadratic_residue_table.py  fp_quadratic_residues_and_dlog.py  fq_cyclic_group_demo.py  fq_extension_construction.py  fq_operator_overloads.py  fq_permutation_actions.py  fq_power_cycle.py  fq_primitive_elements.py  fq_trace_and_norm.py  fq_trace_norm_over_f9.py  ghi.py  jkl.py  opq.py  primitive_elements.py  primitive_elements_3.py  quadratic-residues-sqrt.py  reed_solomon_cd_scratch_demo.py  reed_solomon_demo.py  rs.py  rst.py  sn_conjugacy_demo.py  sn_subgroup_generation.py  sn_sylow_demo.py  trace-n-norm.py  zn_permutation_actions.py  zn_ring_basics.py
