[package]
name = "algebrapy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "algebrapy"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.2" }

[dev-dependencies]
# none
